# k8s-image-version-exporter

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
deploy/: k8s.yaml
src/: dockerhub.rs  ghcr.rs  kube_watcher.rs  lib.rs  main.rs  metrics.rs  registry.rs  types.rs
tests/: dockerhub.rs  ghcr.rs  kube_watcher.rs
