[package]
name = "k8s-image-version-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.86.0", features = ["runtime", "derive"] }
reqwest = { version = "0.11", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
thiserror = "1.0"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "0.31"
tower-test = "0.4"
http = "0.2"
serde_json = "1.0"
