[package]
name = "k8s-image-version-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "1.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.14"
thiserror = "2.0.12"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
bytes = "1"
http = "1.3.1"
hyper-util = { version = "0.1.11", features = ["tokio", "server"] }
http-body-util = "0.1.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.7.0"
tower-test = "0.4"
serde_json = "1.0.140"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
